--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,5 +1,5 @@
 apiVersion: backstage.io/v1alpha1
-kind: component
+kind: Component
 metadata:
   tags:
     - java
@@ -23,7 +23,7 @@ metadata:
 #     snyk.io/org-name: vigneswara-propelo
 #     snyk.io/project-ids: 7c7766e6-1231-4e4f-b51f-0cbd2aacb227, 4addb946-2ff4-41b7-ae71-2a5d480193ee
 spec:
-  type: Service
+  type: service
   system: delivery
   lifecycle: production
   owner: harness_account_all_users
